--- a/sVanilla/src/SUI/AddLinkLineEdit.ui
+++ b/sVanilla/src/SUI/AddLinkLineEdit.ui
@@ -25,11 +25,14 @@
   <widget class="QPushButton" name="btnClear">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>120</x>
      <y>10</y>
      <width>100</width>
      <height>32</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>ArrowCursor</cursorShape>
    </property>
    <property name="text">
     <string/>
@@ -42,7 +45,7 @@
     <string>AppIconButtonPatch</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnSearch">
+  <widget class="QPushButton" name="btnMore">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -51,12 +54,18 @@
      <height>32</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>ArrowCursor</cursorShape>
+   </property>
    <property name="text">
     <string/>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>:/icon/home/search.svg</normaloff>:/icon/home/search.svg</iconset>
+     <normaloff>:/icon/setting/down.svg</normaloff>:/icon/setting/down.svg</iconset>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
    </property>
    <property name="_vanillaStyle_Patch" stdset="0">
     <string>AppIconButtonPatch</string>
@@ -71,12 +80,38 @@
      <height>32</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string/>
    </property>
    <property name="icon">
     <iconset>
      <normaloff>:/icon/website/default.svg</normaloff>:/icon/website/default.svg</iconset>
+   </property>
+   <property name="_vanillaStyle_Patch" stdset="0">
+    <string>AppIconButtonPatch</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnSearch">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>10</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>ArrowCursor</cursorShape>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icon/home/enter.svg</normaloff>:/icon/home/enter.svg</iconset>
    </property>
    <property name="_vanillaStyle_Patch" stdset="0">
     <string>AppIconButtonPatch</string>
