Add new SVG icons and update UI elements
This commit includes new SVG icons such as copy, cut, delete, login, paste, redo, select all, undo, and a modified open url. It also contains updates to the HomePage UI where these icons are implemented, as well as color changes to the light theme. Additional changes include context menu handling and the use of icons in the AddLinkLineEdit element.

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -4,6 +4,14 @@
         <file>icon/common/info.svg</file>
         <file>icon/common/warn.svg</file>
         <file>icon/common/error.svg</file>
+        <file>icon/common/copy.svg</file>
+        <file>icon/common/cut.svg</file>
+        <file>icon/common/delete.svg</file>
+        <file>icon/common/paste.svg</file>
+        <file>icon/common/redo.svg</file>
+        <file>icon/common/selectAll.svg</file>
+        <file>icon/common/undo.svg</file>
+        <file>icon/common/login.svg</file>
         <file>icon/bar/minimize.svg</file>
         <file>icon/bar/maximize.svg</file>
         <file>icon/bar/close.svg</file>
